--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -15,7 +15,17 @@
         <span class="span-50"></span>
         <span class="span-100"></span>
       </div>
+      <div class="container">
+        <div class="row">
+          <h1 class="display-1 text-white">Bienvenu à votre portail médical </h1>
+        </div>
+        <div class="row">
+          <button class="btn btn-success"> <a [routerLink]="['/login']">LogIn</a> </button>
+        </div>
+      </div>
+      
       <div class="container shape-container d-flex align-items-center py-lg">
+        
         <div class="row">
           <div class="col-md4">
             <div class="card" style="width: 18rem;">
