--- a/src/app/sections/navigation-section/navigation-section.component.html
+++ b/src/app/sections/navigation-section/navigation-section.component.html
@@ -69,7 +69,7 @@
           <div class="row">
             <div class="col-6 collapse-brand">
               <a href="javascript:void(0)">
-                <img src="./assets/img/brand/blue.png">
+                <img src="./assets/img/brand/.png">
               </a>
             </div>
             <div class="col-6 collapse-close">
